--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.03.2022 15:00:01</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.03.2022 07:10:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 29. 03. 2022</h5>
+<h5>Středa, 30. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Hrachová s uzeným</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 29.3.2022</div>
+<div class="nadpis">Středa 30.3.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Citronový cheesecake</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Bábovka</div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Krém z konfitovaného česneku, parmazánový toast, pažitka - v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Krém z konfitovaného česneku, parmazánový toast, pažitka - samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Grilované kuřecí prso, sýrová omáčka, pečené bramborové gnocchi, baby špenát, cherry rajčata <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Hovězí rajská pečeně, houskový knedlík, perníkový chips <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Červená čočka na zázvoru, pečená rajčata, basmati rýže, estragon, ředkvička </div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,63 +63,22 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s vejci</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Masové vepřové biftečky s pepřovou redukcí, vařené brambory s máslem, volské oko, hořčice, cibule</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Krůtí soté s bambusovými výhonky a zeleninou, smažené bramborové hranolky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 200g Steak z kuřecích prsou na roštu, grilovaná zelenina s bazalkovým pestem, celerové pyré s máslem a sýrem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine ala Carbonara s kuřecím masem, strouhaný parmazán</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampióny, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pečené baby kuřátko plněné petrželkovou nádivkou, grilované brambory s kmínem, máslová karotka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dorůžova pečená vepřová panenka v listovém těstě s listovým špenátem, bramborová kaše s máslem a šnitlíkem, grilovaná karotka</td><td class="menuPrice">153,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Plněné bramborové knedlíky uzeným masem, dušené bílé zelí, cibulka se škvarky na sádle</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky </td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zbojnická hovězí roštěná, dušená jasmínová rýže</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na grilu, smažené bramborové hranolky, chilli dip</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">1/4</td><td class="menuName">Pečené kuře ala kachna, kynuté houskové a bramborové knedlíky, dušené červené zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Medailonky z vepřové panenky obalené ve vajíčku se sýrem, celerový salát s vejci, paprikou a olivovým olejem, grilovaná karotka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kroupové rizoto s hříbky a žampióny zjemněné smetanou, filírovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové pečeně plněná šunkou, hermelínem a pórkem na roštu, mačkané brambory s cibulkou</td><td class="menuPrice">145,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
-</td>
-</tr>
-</table>
-<table>
-<tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount"></td>
-<td class="title">Grilované papriky v česnekovém olivovém oleji s ricottou
-a bazalkou, rozpečená bylinková bageta 1a,3,7</td>
-<td class="pricem">145 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Polévka Tom Yum Goong s krevetami
-(rajčata, hlíva ústřičná, koriandr, kokosové mléko) 4,5,6,9</td>
-<td class="pricem">99 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Presovaný vepřový bůček v teriyaki omáčce s grilovaným salátem
-Pak choi a jasmínovou rýží 6,12</td>
-<td class="pricem">205 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Jehněčí burger se sýrem Cheddar, vídeňskou cibulkou,
-smaženými bramborovými lupínky a chipotle majonézou
-1a,3,7,10,11</td>
-<td class="pricem">235 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Italské tiramisu 1a,3,7,8a</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
 </td>
 </tr>
 </table>
