--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.03.2022 08:43:22</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.03.2022 09:12:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 30.3.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Malinový cheesecake</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Brokolicový krém s vajíčkem a restovanou slaninou -v menu <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Brokolicový krém s vajíčkem a restovanou zeleninou- samostatně <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Pečený vepřový bok po asijsku, stir fry rýže, koriandr, cherry rajčata <em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Tortilla wrap s trhaným kuřecím masem, rýže, fazole, sýr, bbq omáčka, trhaný listový salát, pažitkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Ragú z hlívy ústřičné, bulgur s kořenovou zeleninou, marinovaná červená cibule, čerstvá majoránka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -94,7 +129,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske kari s kousky rybich filetu, zeleninou, kokosovym mlekem, arasidy a limetkovymi listky, jasminova ryze 139</li><li>Spagety s chobotnici, kalamary, pecenymi paprikami, kaparami a petrzelkovo ancovickovym pestem {L} 175</li><li>Lasagne s hovezim masem, zeleninou a rajcaty zapecene ve smetanove omacce s ementalem, salatek {L} 139</li><li>Pecena jehneci plec a hrudi na luzku z pecene letni zeleniny, pecene brambory, jogurtovy bylinkovy dip 169</li><li>Tofu ve sladkokysele omacce s paprikami, cuketami, chilli, sezamem a sazenym vajickem, jasminova ryze 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s pecenymi cherry rajcaty a citronovo-jogurtovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstve norske tresky s pecenymi cherry rajcaty a citronovo-jogurtovnou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Kantonske hovezi nudlicky s kedlubnou, fazolovymi lusky, zazvorem, sezamem a spetkou chilli, ryzove nudle 139</li><li>Jemne korenene jehneci kofte s citronovou jogurtovou omackou, zeleninove birjany z basmati ryze, salatek 169</li><li>Bramborove gnocchi s ratatouille z pecene letni zeleniny a ovcim cerstvym syrem {L} 139</li></ol>
 </td>
 </tr>
 </table>
